# pigasus

./: CMakeLists.txt  LICENSE  README.md
fortran/: CMakeLists.txt
fortran/assembly/: CMakeLists.txt  assembly_def.F90  fields_operators.F90  l2_norm.F90  l2_projector_vect.F90  norms.F90  operators.F90  projectors.F90  second_deriv.F90  second_deriv_field.F90  stiffness.F90
fortran/blackboxes/: CMakeLists.txt  bbox_def.F90
fortran/connectivities/: CMakeLists.txt  connectivities.F90  connectivities_def.F90
fortran/fem/: CMakeLists.txt  color.F90  fem.F90  fem_def.F90  space.F90
fortran/geometries/: CMakeLists.txt  geometry.F90  geometry_tools.F90
fortran/grids/: CMakeLists.txt  grids_def.F90
fortran/spm/: CMakeLists.txt
fortran/tools/: CMakeLists.txt
fortran/tracelog/: CMakeLists.txt  tracelog.F90
python/: CMakeLists.txt  setup.py.in
python/core/: pyfem.f90
python/fem/: ElementsManager.py  basicPDE.py  basicPDE_nonlin.py  block_basicPDE.py  boundary_conditions.py  boundary_conditions_1D.py  boundary_conditions_2D.py  boundary_conditions_3D.py  boundary_grid.py  color.py  common_obj.py  connectivity.py  connectivity_1D.py  connectivity_1D_per.py  connectivity_2D.py  connectivity_3D.py  connectivity_vect.py  constants.py  fast_iga.py  fem.py  field.py  func_tools.py  graph.py  grid.py  grids.py  idutils.py  mapping.py  matrix.py  metric.py  norm.py  oper.py  pastix.py  pigasusClass.py  pigasusObject.py  qd_radau.py  quadratures.py  solver.py  space.py  spsolve.py  superLU.py  (+2 more)
python/fit/: curfit.py  surfit.py  utils.py
python/gallery/: __init__.py  anisotropicDiffusion.py  bilaplacian.py  multigrid.py  poisson.py  poisson_nonlin.py  reduced_mhd.py  tomography.py
python/gallery/demo/: Errors.txt  constrained_cg.py  dirichlet_neumann_2d.py  gen_meshes_1D.py  test_dirichlet_1d.pfl  test_dirichlet_2d.pfl  test_monge_ampere_mesh_MG.py  test_neumann_quartcircle.pfl  test_nonlin_ex1_picard_mp.py  test_poisson_1d.py  test_poisson_2d.py  test_poisson_circle.pfl  test_poisson_circle_metric.py  test_solver_circ.py  test_solver_scipy.txt
python/multigrid/: EllipticPDEMG.py  agregation.py  multilevel.py  operators.py  relaxation.py  splineRefMat.py
python/plugin/: adaptiveMesh.py  currentHole.py  figa.py  figa_circ.py  grad_shafranov.py  monge_ampere.py  parabolic_monge_ampere.py  tokamesh.py
python/utils/: blockdata.py  gen_meshes.py  impeqpy.py  load.py  manager.py  nearestCirculant.py  nearestKP.py  nearestToeplitz.py  utils.py
src/: CMakeLists.txt  TODO.txt
src/assembly/: CMakeLists.txt  H1_norm.F90  advection.F90  assembly.F90  assembly_def.F90  assembly_tools.F90  curl_field.F90  fields_tools.F90  grad_field.F90  grad_s_field.F90  hessian_field.F90  identity_field.F90  l2_projector.F90  l2_projector_curl.F90  l2_projector_grad.F90  mass.F90  mass_t2.F90  mass_vect.F90  operators.F90  projectors.F90  rotational.F90  rotational_scalar.F90  second_deriv_s_field.F90  stiffness.F90
src/blackboxes/: CMakeLists.txt  bbox.F90
src/connectivities/: CMakeLists.txt  connectivity.F90
src/fem/: CMakeLists.txt  fem.F90  fem_def.F90  field.F90  graph.F90  grids.F90  matrix.F90  metric.F90  norm.F90  operator.F90  solver.F90
src/geometries/: CMakeLists.txt  geometries.F90  geometries_def.F90  igalib.F90
src/grids/: CMakeLists.txt  elements.F90  elements_tensor.F90  grids.F90
src/pigasus/: CHANGES.txt  README.txt  setup.py
src/pigasus/core/: pyfem.f90
src/pigasus/fem/: ElementsManager.py  basicPDE.py  basicPDE_nonlin.py  bnd_function.py  boundary_conditions.py  boundary_conditions_1D.py  boundary_conditions_2D.py  boundary_conditions_3D.py  boundary_grid.py  color.py  common_obj.py  connectivity.py  connectivity_3D.py  connectivity_vect.py  constants.py  fem.py  field.py  func_tools.py  grid.py  grids.py  mapping.py  matrix.py  norm.py  oper.py  pigasusClass.py  pigasusObject.py  space.py  spsolve.py  superLU.py  tracelog.py  utils.py  xdmf_2D.py
src/pigasus/fit/: curfit.py  surfit.py  utils.py
src/pigasus/gallery/: __init__.py  anisotropicDiffusion.py  bilaplacian.py  multigrid.py  parabolic.py  poisson.py  poisson_nonlin.py
src/pigasus/gallery/demo/: M.mtx  U.pfl  dirichlet_neumann_2d.py  genMovingMesh.py  gen_gradiant_map.py  gen_meshes_1D.py  gen_meshes_2D.py  gen_square_def.py  test_anisotropicDiffusion.py  test_anisotropicDiffusionMMPDE.py  test_bilaplacian_2d.py  test_dirichlet_1d.py  test_dirichlet_2d.py  test_monge_ampere_mesh_MG.py  test_monge_ampere_mesh_picard.py  test_monge_ampere_mesh_picardtwogrids.py  test_monge_ampere_picard.py  test_multigrid.py  test_multigrid.txt  test_neumann_2d.py  test_neumann_circle.py  test_neumann_quartcircle.py  test_nonlin_ex1_newton.py  test_nonlin_ex1_newton_mp.py  test_nonlin_ex1_picard.py  test_nonlin_ex1_picard_mp.py  test_poisson_1d.py  test_poisson_2d.py  test_poisson_circle.py  test_poisson_circle_metric.py  test_solver_petsc4py.py  test_solver_petsc4py.txt  test_solver_pyamg.py  test_solver_pyamg.txt  test_solver_scipy.py  transfer_solution.py
src/pigasus/gallery/mhd_equilibrium/: iter_inner.xml
src/pigasus/interpolate/: interpolation.py
src/pigasus/multigrid/: agregation.py  operators.py  relaxation.py  splineRefMat.py
src/pigasus/plugin/: adaptiveMesh.py  currentHole.py  figa.py  figa_circ.py  grad_shafranov.py  monge_ampere.py  parabolic_monge_ampere.py
src/pigasus/utils/: gen_meshes.py  impeqpy.py  load.py  nearestCirculant.py  nearestKP.py  utils.py
src/tools/: CMakeLists.txt
src/tracelog/: CMakeLists.txt
tests/: constrained_cg.py  dirichlet_neumann_2d.py  gen_square_def.py  runtests.py  test_1_blockPDE.py  test_anisotropicDiffusion.py  test_anisotropicDiffusionMMPDE.py  test_bilaplacian_2d.py  test_dirichlet_1d.py  test_dirichlet_2d.py  test_dirichlet_neumann_2d.py  test_monge_ampere_mesh_MG.py  test_monge_ampere_mesh_picard.py  test_monge_ampere_mesh_picardtwogrids.py  test_monge_ampere_picard.py  test_multigrid.py  test_neumann_2d.py  test_neumann_circle.py  test_neumann_quartcircle.py  test_nonlin_ex1_newton.py  test_nonlin_ex1_newton_mp.py  test_nonlin_ex1_picard.py  (+11 more)
(+89 files in other folders)
